Added some new files to take care of registerd users

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ todo:
   * Make git ignore X
   * hash password X
   * put user in db X
-  + What happens if username is taken, or passw not matches?
-  * What happends when registered?
+  * What happens if username is taken, or passw not matches? X
+  * take care of registerd user so they can logg in
+  * Create loged in startpage
   * start building page to add new products
