Added a button in logged in view to add new reports. it is soon time to fill the db

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ todo:
   * take care of registerd user so they can logg in X
   * Fix log in function, using db. X
   * Create loged in startpage (temporary) X
-  * Researsh and implement sessions för the loged in view. 
+  * Researsh and implement sessions för the loged in view. X (ish)
+  * Connect controller and viewpages for add report functions. 
   * start building page to add new products
   * Add a short read me X
